# SafeDreamer

./: .gitignore  Dockerfile  analyze_episode.py  compute_results_brute_force.py  compute_surface_plots.py  entrypoint.sh  environment.yml  eval_dm3_sequential.sh  generate_surface_plots_cardreamer.py  jax_testing.py  main.py  pyproject.backup.toml  pyproject.toml  reqs.txt  requirements.txt  setup.cfg  stats.csv  stats_conditions.csv  test.py  test_mesa.py  tmp.py
20250531-150612_name_safetygym_SafetyPointGoal2-v0_0/: config.yaml
CarDreamerRepo/: check_for_missing_folders.sh  compute_results.py  compute_results_folder.py  compute_results_lines.py  compute_results_single.py  eval_dm3.sh  eval_dm3_sequential.sh  eval_dm3_sequential_jobs.sh  train_mask.sh
CarDreamerRepo/car_dreamer/: carla_base_env.py  carla_wpt_env.py
CarDreamerRepo/dreamerv3/: README.md  agent.py  dreamer_eval_script_full.sh  dreamer_eval_script_single.sh  dreamer_rerun_failures_folders_script.sh  dreamer_rerun_failures_script.sh  dreamer_run_script.sh  dreamer_run_script_mask_distractions.sh  dreamer_sbatch_script_single.sh  dreamerv3.yaml  eval.py  expl.py  jaxagent.py  jaxutils.py  nets.py  requirements.txt
HRSSM/HRSSM/: .gitignore  README.md  configs.yaml  dreamer.py  dreamer_run_script.sh  environment_safe.yml  eval_dm3_sequential.sh  (+7 more)
SafeDreamer/: agent.py  configs.yaml  jaxutils.py  nets.py  train.py
car_dreamer/: carla_base_env.py
dreamerv3/: agent.py  dreamer_eval_script_single.sh  dreamer_run_script.sh  dreamerv3.yaml  train.py
scripts/: run_evals.sh  test_evals_single.sh  train.sh
(+30 files in other folders)
