[project]
name = "safedreamer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cloudpickle>=3.1.2",
    "imageio>=2.37.2",
    "jaxlib==0.4.30",
    "matplotlib>=3.10.7",
    "moviepy>=1.0.3",
    "numpy>=1.23.5",
    "opencv-python>=4.8.1.78",
    "optax==0.1.4",
    "rich>=14.2.0",
    "ruamel-yaml==0.17.21",
    "safety-gymnasium>=1.0.0",
    "tensorflow>=2.15.0",
    "tensorflow-probability>=0.25.0",
    "wandb>=0.22.3",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]  # stop uv from solving darwin/aarch64 splits you don't want

[tool.uv.sources]
safety-gymnasium = { git = "https://github.com/PKU-Alignment/safety-gymnasium" }
